fix connect page wrapping

--- a/src/frontend/src/assets/styles/tailwind.css
+++ b/src/frontend/src/assets/styles/tailwind.css
@@ -3917,7 +3917,7 @@ select {
 }
 
 .min-w-connection {
-  min-width: 23rem;
+  min-width: 25rem;
 }
 
 .min-w-instance {
